name:                hevents
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Arnaud Bailly
maintainer:          arnaud@igitur.io

category:            Control

build-type:          Simple
cabal-version:       >=1.10

Library
  Default-Language:   Haskell2010
  build-depends:    aeson
                  , async
                  , base
                  , base64-bytestring
                  , binary
                  , bytestring
                  , cereal
                  , clock
                  , comonad
                  , containers
                  , either
                  , extensible-effects
                  , mtl
                  , servant
                  , servant-server
                  , stm
                  , text
                  , time
                  , wai
                  , wai-extra
                  , warp
  hs-source-dirs:     src
  exposed-modules:  Hevents, Hevents.Eff
  other-modules:    Hevents.Model, Hevents.Store, Hevents.State, Hevents.Service
                  , Hevents.Eff.Model, Hevents.Eff.State, Hevents.Eff.State.InMemory, Hevents.Eff.Sync
                  , Hevents.Eff.Store, Hevents.Eff.Store.MemoryStorage, Hevents.Eff.Store.FileStorage, Hevents.Eff.Store.Events
                  , Hevents.Eff.WebServer
  default-extensions:
                      OverloadedStrings,  FlexibleContexts , FlexibleInstances, FunctionalDependencies, GeneralizedNewtypeDeriving
                    , MultiParamTypeClasses, RankNTypes, RecordWildCards, TypeFamilies, TypeOperators, UndecidableInstances, GADTs
  ghc-options:     -Wall -Werror -fno-warn-orphans -threaded -rtsopts -auto-all -caf-all

Test-Suite tests
   Default-Language:  Haskell2010
   hs-source-dirs:    test
   default-extensions:
                      OverloadedStrings,  FlexibleContexts , FlexibleInstances, FunctionalDependencies, GeneralizedNewtypeDeriving
                    , MultiParamTypeClasses, RankNTypes, RecordWildCards, TypeFamilies, TypeOperators, UndecidableInstances, GADTs

   type:              exitcode-stdio-1.0
   main-is:           test.hs
   ghc-options:       -threaded -Wall -Werror -fno-warn-orphans -rtsopts
   build-depends: HUnit
                , QuickCheck
                , aeson
                , async
                , base
                , binary
                , bytestring
                , bytestring-conversion
                , cereal
                , clock
                , containers
                , data-default
                , directory
                , either
                , exceptions
                , extensible-effects
                , filepath
                , free
                , hevents
                , hspec
                , hspec-wai
                , http-client
                , http-types
                , lens
                , mtl
                , servant
                , servant-client
                , servant-server
                , stm
                , test-framework
                , test-framework-hunit
                , test-framework-quickcheck2
                , text
                , time
                , wai