name:                hevents
synopsis:            Base building blocks for building event-sourced services in Haskell                                                
description:

            HEvents provide needed machinery to build Event Sourced Web Services in Haskell.
            User should be able to define only a "Business Domain" model, describing the state of the
            service, commands and events that can be used to affect it ; then Hevents provide the
            machinery to handle commands, maintain state, persist events in a file-based log, expose
            the service through a REST interface, provide logs and metrics...

            HEvents is based on some other great packages:
            
            * <https://hackage.haskell.org/package/extensible-effects-1.11.0.2 extensible-effects> provides the
              type-level tooling anc conceptual framework for composing individual effects into a full-stack
              framework
                
            * <http://haskell-servant.readthedocs.io/en/stable/ servant> provides the RESTful API infrastructure.
                     
version:             0.2.0.0
license:             MIT
license-file:        LICENSE
author:              Arnaud Bailly
maintainer:          arnaud@igitur.io

category:            Control

build-type:          Simple
cabal-version:       >=1.10

Library
  Default-Language:   Haskell2010
  build-depends:    aeson
                  , async
                  , base >= 4 && < 5
                  , base64-bytestring
                  , binary
                  , bytestring
                  , cereal
                  , clock
                  , comonad
                  , containers
                  , either
                  , extensible-effects
                  , mtl
                  , network
                  , servant
                  , servant-server
                  , stm
                  , text
                  , time
                  , wai
                  , wai-extra
                  , warp
  hs-source-dirs:     src
  exposed-modules:  Hevents.Eff
  other-modules:    Hevents.Eff.Model, Hevents.Eff.State, Hevents.Eff.State.InMemory, Hevents.Eff.Sync, Hevents.Eff.Store.FileOps
                  , Hevents.Eff.Persist
                  , Hevents.Eff.Store, Hevents.Eff.Store.Events
                  , Hevents.Eff.WebServer
  default-extensions:
                      OverloadedStrings,  FlexibleContexts , FlexibleInstances, FunctionalDependencies, GeneralizedNewtypeDeriving
                    , MultiParamTypeClasses, RankNTypes, RecordWildCards, TypeFamilies, TypeOperators, UndecidableInstances, GADTs
                    , DataKinds
  ghc-options:     -Wall -fno-warn-orphans -auto-all -caf-all

Test-Suite tests
   Default-Language:  Haskell2010
   hs-source-dirs:    test
   default-extensions:
                      OverloadedStrings,  FlexibleContexts , FlexibleInstances, FunctionalDependencies, GeneralizedNewtypeDeriving
                    , MultiParamTypeClasses, RankNTypes, RecordWildCards, TypeFamilies, TypeOperators, UndecidableInstances, GADTs

   type:              exitcode-stdio-1.0
   main-is:           test.hs
   ghc-options:       -threaded -Wall -fno-warn-orphans -rtsopts
   build-depends: HUnit
                , QuickCheck
                , aeson
                , async
                , base
                , binary
                , bytestring
                , bytestring-conversion
                , cereal
                , clock
                , containers
                , data-default
                , directory
                , either
                , exceptions
                , extensible-effects
                , filepath
                , free
                , hevents
                , hspec
                , hspec-wai
                , http-client
                , http-types
                , lens
                , mtl
                , servant
                , servant-client
                , servant-server
                , stm
                , test-framework
                , test-framework-hunit
                , test-framework-quickcheck2
                , text
                , time
                , wai
